--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+        <link rel="stylesheet" href="E:\Projects\learning-git-2\css">
         <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300&family=Merriweather:wght@300;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">        
+        <link rel="stylesheet" href="css\style.css">       
     </head>
     <body>
+            
     </body>
 </html>
