--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
         <link rel="stylesheet" href="css\style.css">       
     </head>
     <body>
-            
+        <h1>Behind Blue Eyes</h1>
+        <h2>Limp Bizkit</h2>
+        <p>               No one knows what it's like
+           To be the bad man
+           To be the sad man
+           Behind blue eyes
+           And no one knows what it's like
+           To be hated
+           To be fated to telling only lies
+           But my dreams they aren't as empty
+           As my conscience seems to be
+           I have hours, only lonely
+           My love is <span>vengeance</span>
+           That's never free
+           No one knows what its like
+           To feel these feelings
+           Like I do
+           And I blame you
+           No one bites back as hard
+           On their anger
+           None of my pain and woe
+           Can show through
+           But my dreams they aren't as empty
+           As my conscience seems to be
+           I have hours, only lonely
+           My love is vengeance
+           That's <span>never free</span>
+           No one knows what its like
+           To be mistreated, to be defeated
+           Behind blue eyes
+           An no…</p>       
     </body>
 </html>
